Question 14, La FIN DES TEMPS.

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 205,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.717934Z",
-     "start_time": "2023-05-18T16:05:43.594826Z"
+     "end_time": "2023-05-20T16:27:38.073860Z",
+     "start_time": "2023-05-20T16:27:37.980141Z"
     }
    },
    "outputs": [],
@@ -67,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 206,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.720783Z",
-     "start_time": "2023-05-18T16:05:43.605466Z"
+     "end_time": "2023-05-20T16:27:38.074742Z",
+     "start_time": "2023-05-20T16:27:37.986334Z"
     }
    },
    "outputs": [],
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 207,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.721134Z",
-     "start_time": "2023-05-18T16:05:43.612615Z"
+     "end_time": "2023-05-20T16:27:38.075110Z",
+     "start_time": "2023-05-20T16:27:37.993156Z"
     }
    },
    "outputs": [],
@@ -136,11 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 208,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.721482Z",
-     "start_time": "2023-05-18T16:05:43.617094Z"
+     "end_time": "2023-05-20T16:27:38.075426Z",
+     "start_time": "2023-05-20T16:27:38.000361Z"
     }
    },
    "outputs": [],
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 209,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.721831Z",
-     "start_time": "2023-05-18T16:05:43.628411Z"
+     "end_time": "2023-05-20T16:27:38.075770Z",
+     "start_time": "2023-05-20T16:27:38.005151Z"
     }
    },
    "outputs": [],
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 210,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.722474Z",
-     "start_time": "2023-05-18T16:05:43.634469Z"
+     "end_time": "2023-05-20T16:27:38.076358Z",
+     "start_time": "2023-05-20T16:27:38.010539Z"
     }
    },
    "outputs": [],
@@ -236,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 211,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.722515Z",
-     "start_time": "2023-05-18T16:05:43.639589Z"
+     "end_time": "2023-05-20T16:27:38.076721Z",
+     "start_time": "2023-05-20T16:27:38.015708Z"
     }
    },
    "outputs": [],
@@ -275,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 212,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.722829Z",
-     "start_time": "2023-05-18T16:05:43.643666Z"
+     "end_time": "2023-05-20T16:27:38.077035Z",
+     "start_time": "2023-05-20T16:27:38.020946Z"
     }
    },
    "outputs": [],
@@ -319,11 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 213,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.723147Z",
-     "start_time": "2023-05-18T16:05:43.647401Z"
+     "end_time": "2023-05-20T16:27:38.077587Z",
+     "start_time": "2023-05-20T16:27:38.025680Z"
     }
    },
    "outputs": [],
@@ -345,11 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 214,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.723489Z",
-     "start_time": "2023-05-18T16:05:43.650840Z"
+     "end_time": "2023-05-20T16:27:38.077720Z",
+     "start_time": "2023-05-20T16:27:38.032706Z"
     }
    },
    "outputs": [],
@@ -374,11 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 215,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.723834Z",
-     "start_time": "2023-05-18T16:05:43.655292Z"
+     "end_time": "2023-05-20T16:27:38.077760Z",
+     "start_time": "2023-05-20T16:27:38.037253Z"
     }
    },
    "outputs": [],
@@ -408,11 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 216,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:43.724159Z",
-     "start_time": "2023-05-18T16:05:43.658438Z"
+     "end_time": "2023-05-20T16:27:38.077801Z",
+     "start_time": "2023-05-20T16:27:38.041160Z"
     }
    },
    "outputs": [],
@@ -435,11 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 217,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:44.467902Z",
-     "start_time": "2023-05-18T16:05:43.662212Z"
+     "end_time": "2023-05-20T16:27:38.859681Z",
+     "start_time": "2023-05-20T16:27:38.045605Z"
     }
    },
    "outputs": [],
@@ -468,11 +468,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 218,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:44.472351Z",
-     "start_time": "2023-05-18T16:05:44.470025Z"
+     "end_time": "2023-05-20T16:27:38.864297Z",
+     "start_time": "2023-05-20T16:27:38.862896Z"
     }
    },
    "outputs": [],
@@ -514,32 +514,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 219,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:44.477064Z",
-     "start_time": "2023-05-18T16:05:44.475428Z"
+     "end_time": "2023-05-20T16:27:38.869812Z",
+     "start_time": "2023-05-20T16:27:38.867222Z"
     }
    },
    "outputs": [],
    "source": [
     "def decompress(liste_bloc):\n",
-    "    block_size = 8\n",
-    "    image_width = len(liste_bloc[0]) * block_size\n",
-    "    image_height = len(liste_bloc) * block_size\n",
-    "    image = np.zeros((image_height, image_width, 3), dtype=np.uint8)\n",
+    "  num_blocks = len(liste_bloc)\n",
+    "  rows = int(np.sqrt(num_blocks))\n",
+    "  cols = num_blocks // rows\n",
+    "  image = np.zeros((rows*8, cols*8), dtype=np.uint8)\n",
     "\n",
-    "    for i, block_row in enumerate(liste_bloc):\n",
-    "        for j, block in enumerate(block_row):\n",
-    "            block = np.array(block)\n",
-    "            block = block.reshape((block_size, block_size, 3))\n",
+    "  for i in range(len(liste_bloc)):\n",
+    "    liste_bloc[i] = idct2(liste_bloc[i])\n",
     "\n",
-    "            start_row = i * block_size\n",
-    "            start_col = j * block_size\n",
+    "  for i in range(rows):\n",
+    "    for j in range(cols):\n",
+    "      block = liste_bloc[i*cols + j]\n",
+    "      image[i*8:(i+1)*8, j*8:(j+1)*8] = block\n",
     "\n",
-    "            image[start_row:start_row+block_size, start_col:start_col+block_size, :] = block\n",
-    "\n",
-    "    return image"
+    "  return image"
    ]
   },
   {
@@ -552,11 +550,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 220,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:05:44.483881Z",
-     "start_time": "2023-05-18T16:05:44.481944Z"
+     "end_time": "2023-05-20T16:27:38.877941Z",
+     "start_time": "2023-05-20T16:27:38.876616Z"
     }
    },
    "outputs": [],
@@ -598,6 +596,13 @@
     "    if rle:\n",
     "        liste_bloc = decode_RLE(liste_bloc)\n",
     "    liste_bloc = decompress(liste_bloc)\n",
+    "    #transformer les elements en float\n",
+    "    for i in range(len(liste_bloc)):\n",
+    "        for j in range(len(liste_bloc[0])):\n",
+    "            for k in range(len(liste_bloc[0][0])):\n",
+    "                for l in range(len(liste_bloc[0][0][0])):\n",
+    "                    liste_bloc[i][j][k][l] = float(liste_bloc[i][j][k][l])\n",
+    "    f.close()\n",
     "    return liste_bloc"
    ]
   },
@@ -611,24 +616,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 221,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-18T16:06:01.173180Z",
-     "start_time": "2023-05-18T16:05:44.485653Z"
+     "end_time": "2023-05-20T16:27:56.904404Z",
+     "start_time": "2023-05-20T16:27:38.880180Z"
     }
    },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: '255 255 255 \\n'",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [291], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m \u001B[38;5;66;03m#ecrire_bloc(test)\u001B[39;00m\n\u001B[1;32m     20\u001B[0m info_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn [290], line 34\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     32\u001B[0m liste_bloc\u001B[38;5;241m.\u001B[39mclear()\n\u001B[1;32m     33\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;241m4\u001B[39m,\u001B[38;5;241m7\u001B[39m):\n\u001B[0;32m---> 34\u001B[0m     liste_bloc\u001B[38;5;241m.\u001B[39mappend(\u001B[43mligne\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[38;5;241;43m-\u001B[39;49m\u001B[38;5;241;43m1\u001B[39;49m\u001B[43m]\u001B[49m)\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m rle:\n\u001B[1;32m     36\u001B[0m     liste_bloc \u001B[38;5;241m=\u001B[39m decode_RLE(liste_bloc)\n",
-      "\u001B[0;31mIndexError\u001B[0m: list index out of range"
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [221], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[1;32m     20\u001B[0m info_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn [220], line 37\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m rle:\n\u001B[1;32m     36\u001B[0m     liste_bloc \u001B[38;5;241m=\u001B[39m decode_RLE(liste_bloc)\n\u001B[0;32m---> 37\u001B[0m liste_bloc \u001B[38;5;241m=\u001B[39m \u001B[43mdecompress\u001B[49m\u001B[43m(\u001B[49m\u001B[43mliste_bloc\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     38\u001B[0m \u001B[38;5;66;03m#transformer les elements en float\u001B[39;00m\n\u001B[1;32m     39\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc)):\n",
+      "Cell \u001B[0;32mIn [219], line 8\u001B[0m, in \u001B[0;36mdecompress\u001B[0;34m(liste_bloc)\u001B[0m\n\u001B[1;32m      5\u001B[0m image \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros((rows\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m8\u001B[39m, cols\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m8\u001B[39m), dtype\u001B[38;5;241m=\u001B[39mnp\u001B[38;5;241m.\u001B[39muint8)\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc)):\n\u001B[0;32m----> 8\u001B[0m   liste_bloc[i] \u001B[38;5;241m=\u001B[39m \u001B[43midct2\u001B[49m\u001B[43m(\u001B[49m\u001B[43mliste_bloc\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(rows):\n\u001B[1;32m     11\u001B[0m   \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(cols):\n",
+      "Cell \u001B[0;32mIn [205], line 23\u001B[0m, in \u001B[0;36midct2\u001B[0;34m(a)\u001B[0m\n\u001B[1;32m     22\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21midct2\u001B[39m(a):\n\u001B[0;32m---> 23\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m sp\u001B[38;5;241m.\u001B[39mfft\u001B[38;5;241m.\u001B[39midct( \u001B[43msp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfft\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43midct\u001B[49m\u001B[43m(\u001B[49m\u001B[43m \u001B[49m\u001B[43ma\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maxis\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m \u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnorm\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mortho\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m , norm\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mortho\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "File \u001B[0;32m~/opt/miniconda3/lib/python3.9/site-packages/scipy/fft/_backend.py:25\u001B[0m, in \u001B[0;36m_ScipyBackend.__ua_function__\u001B[0;34m(method, args, kwargs)\u001B[0m\n\u001B[1;32m     23\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m fn \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m     24\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mNotImplemented\u001B[39m\n\u001B[0;32m---> 25\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfn\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[0;32m~/opt/miniconda3/lib/python3.9/site-packages/scipy/fft/_pocketfft/realtransforms.py:19\u001B[0m, in \u001B[0;36m_r2r\u001B[0;34m(forward, transform, x, type, n, axis, norm, overwrite_x, workers, orthogonalize)\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m_r2r\u001B[39m(forward, transform, x, \u001B[38;5;28mtype\u001B[39m\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m2\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m, norm\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m,\n\u001B[1;32m      9\u001B[0m          overwrite_x\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m, workers\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, orthogonalize\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n\u001B[1;32m     10\u001B[0m     \u001B[38;5;124;03m\"\"\"Forward or backward 1-D DCT/DST\u001B[39;00m\n\u001B[1;32m     11\u001B[0m \n\u001B[1;32m     12\u001B[0m \u001B[38;5;124;03m    Parameters\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     17\u001B[0m \u001B[38;5;124;03m        The transform to perform\u001B[39;00m\n\u001B[1;32m     18\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m---> 19\u001B[0m     tmp \u001B[38;5;241m=\u001B[39m \u001B[43m_asfarray\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     20\u001B[0m     overwrite_x \u001B[38;5;241m=\u001B[39m overwrite_x \u001B[38;5;129;01mor\u001B[39;00m _datacopied(tmp, x)\n\u001B[1;32m     21\u001B[0m     norm \u001B[38;5;241m=\u001B[39m _normalization(norm, forward)\n",
+      "File \u001B[0;32m~/opt/miniconda3/lib/python3.9/site-packages/scipy/fft/_pocketfft/helper.py:92\u001B[0m, in \u001B[0;36m_asfarray\u001B[0;34m(x)\u001B[0m\n\u001B[1;32m     90\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m np\u001B[38;5;241m.\u001B[39masarray(x, np\u001B[38;5;241m.\u001B[39mfloat32)\n\u001B[1;32m     91\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m x\u001B[38;5;241m.\u001B[39mdtype\u001B[38;5;241m.\u001B[39mkind \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mfc\u001B[39m\u001B[38;5;124m'\u001B[39m:\n\u001B[0;32m---> 92\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43masarray\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfloat64\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     94\u001B[0m \u001B[38;5;66;03m# Require native byte order\u001B[39;00m\n\u001B[1;32m     95\u001B[0m dtype \u001B[38;5;241m=\u001B[39m x\u001B[38;5;241m.\u001B[39mdtype\u001B[38;5;241m.\u001B[39mnewbyteorder(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m=\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "\u001B[0;31mValueError\u001B[0m: could not convert string to float: '255 255 255 \\n'"
      ]
     }
    ],
@@ -651,7 +661,7 @@
     "mode_1 = applique_seuil(applique_trans(decoupe_bloc(padding(RGB_en_YCbCR(test)))),10)\n",
     "mode_2 = applique_seuil(applique_trans(decoupe_bloc(padding(sous_echantillonnage(RGB_en_YCbCR(test))))),10)\n",
     "ecrire_fichier(test, \"mode 0\")\n",
-    "#ecrire_bloc(test)\n",
+    "ecrire_bloc(test)\n",
     "info_fichier(\"fichier.txt\")\n",
     "lire_fichier(\"fichier.txt\")\n",
     "#Image.fromarray(mode_0,'RGB').show()\n",
