ENCORE DES PROBLèMES.

--- a/projet.ipynb
+++ b/projet.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 255,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.073860Z",
-     "start_time": "2023-05-20T16:27:37.980141Z"
+     "end_time": "2023-05-20T16:59:34.487189Z",
+     "start_time": "2023-05-20T16:59:34.383146Z"
     }
    },
    "outputs": [],
@@ -67,11 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 256,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.074742Z",
-     "start_time": "2023-05-20T16:27:37.986334Z"
+     "end_time": "2023-05-20T16:59:34.488131Z",
+     "start_time": "2023-05-20T16:59:34.388740Z"
     }
    },
    "outputs": [],
@@ -103,11 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 257,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.075110Z",
-     "start_time": "2023-05-20T16:27:37.993156Z"
+     "end_time": "2023-05-20T16:59:34.488488Z",
+     "start_time": "2023-05-20T16:59:34.395816Z"
     }
    },
    "outputs": [],
@@ -136,11 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 258,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.075426Z",
-     "start_time": "2023-05-20T16:27:38.000361Z"
+     "end_time": "2023-05-20T16:59:34.488833Z",
+     "start_time": "2023-05-20T16:59:34.401273Z"
     }
    },
    "outputs": [],
@@ -160,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 259,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.075770Z",
-     "start_time": "2023-05-20T16:27:38.005151Z"
+     "end_time": "2023-05-20T16:59:34.489201Z",
+     "start_time": "2023-05-20T16:59:34.407978Z"
     }
    },
    "outputs": [],
@@ -202,11 +202,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 260,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.076358Z",
-     "start_time": "2023-05-20T16:27:38.010539Z"
+     "end_time": "2023-05-20T16:59:34.489766Z",
+     "start_time": "2023-05-20T16:59:34.414306Z"
     }
    },
    "outputs": [],
@@ -236,11 +236,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 261,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.076721Z",
-     "start_time": "2023-05-20T16:27:38.015708Z"
+     "end_time": "2023-05-20T16:59:34.490111Z",
+     "start_time": "2023-05-20T16:59:34.419366Z"
     }
    },
    "outputs": [],
@@ -275,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 262,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.077035Z",
-     "start_time": "2023-05-20T16:27:38.020946Z"
+     "end_time": "2023-05-20T16:59:34.490415Z",
+     "start_time": "2023-05-20T16:59:34.424546Z"
     }
    },
    "outputs": [],
@@ -319,11 +319,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 263,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.077587Z",
-     "start_time": "2023-05-20T16:27:38.025680Z"
+     "end_time": "2023-05-20T16:59:34.490745Z",
+     "start_time": "2023-05-20T16:59:34.428148Z"
     }
    },
    "outputs": [],
@@ -345,11 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 264,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.077720Z",
-     "start_time": "2023-05-20T16:27:38.032706Z"
+     "end_time": "2023-05-20T16:59:34.491060Z",
+     "start_time": "2023-05-20T16:59:34.432194Z"
     }
    },
    "outputs": [],
@@ -374,11 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 265,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.077760Z",
-     "start_time": "2023-05-20T16:27:38.037253Z"
+     "end_time": "2023-05-20T16:59:34.491464Z",
+     "start_time": "2023-05-20T16:59:34.438806Z"
     }
    },
    "outputs": [],
@@ -408,11 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 266,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.077801Z",
-     "start_time": "2023-05-20T16:27:38.041160Z"
+     "end_time": "2023-05-20T16:59:34.497717Z",
+     "start_time": "2023-05-20T16:59:34.443735Z"
     }
    },
    "outputs": [],
@@ -435,11 +435,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 267,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.859681Z",
-     "start_time": "2023-05-20T16:27:38.045605Z"
+     "end_time": "2023-05-20T16:59:35.293363Z",
+     "start_time": "2023-05-20T16:59:34.450707Z"
     }
    },
    "outputs": [],
@@ -468,11 +468,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 268,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.864297Z",
-     "start_time": "2023-05-20T16:27:38.862896Z"
+     "end_time": "2023-05-20T16:59:35.297301Z",
+     "start_time": "2023-05-20T16:59:35.295534Z"
     }
    },
    "outputs": [],
@@ -514,11 +514,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 269,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.869812Z",
-     "start_time": "2023-05-20T16:27:38.867222Z"
+     "end_time": "2023-05-20T16:59:35.301467Z",
+     "start_time": "2023-05-20T16:59:35.300475Z"
     }
    },
    "outputs": [],
@@ -550,11 +550,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 270,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:38.877941Z",
-     "start_time": "2023-05-20T16:27:38.876616Z"
+     "end_time": "2023-05-20T16:59:35.323975Z",
+     "start_time": "2023-05-20T16:59:35.318339Z"
     }
    },
    "outputs": [],
@@ -595,13 +595,13 @@
     "        liste_bloc.append(ligne[i])\n",
     "    if rle:\n",
     "        liste_bloc = decode_RLE(liste_bloc)\n",
-    "    liste_bloc = decompress(liste_bloc)\n",
-    "    #transformer les elements en float\n",
+    "    #replace /n by nothing\n",
     "    for i in range(len(liste_bloc)):\n",
     "        for j in range(len(liste_bloc[0])):\n",
     "            for k in range(len(liste_bloc[0][0])):\n",
     "                for l in range(len(liste_bloc[0][0][0])):\n",
-    "                    liste_bloc[i][j][k][l] = float(liste_bloc[i][j][k][l])\n",
+    "                    liste_bloc[i][j][k][l] = liste_bloc[i][j][k][l].replace(\"\\n\", \"\")\n",
+    "    liste_bloc = decompress(liste_bloc)\n",
     "    f.close()\n",
     "    return liste_bloc"
    ]
@@ -616,29 +616,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 272,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-20T16:27:56.904404Z",
-     "start_time": "2023-05-20T16:27:38.880180Z"
+     "end_time": "2023-05-20T17:00:23.366525Z",
+     "start_time": "2023-05-20T17:00:03.812868Z"
     }
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: '255 255 255 \\n'",
+     "ename": "TypeError",
+     "evalue": "'str' object does not support item assignment",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn [221], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[1;32m     20\u001B[0m info_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[0;32mIn [220], line 37\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     35\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m rle:\n\u001B[1;32m     36\u001B[0m     liste_bloc \u001B[38;5;241m=\u001B[39m decode_RLE(liste_bloc)\n\u001B[0;32m---> 37\u001B[0m liste_bloc \u001B[38;5;241m=\u001B[39m \u001B[43mdecompress\u001B[49m\u001B[43m(\u001B[49m\u001B[43mliste_bloc\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     38\u001B[0m \u001B[38;5;66;03m#transformer les elements en float\u001B[39;00m\n\u001B[1;32m     39\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc)):\n",
-      "Cell \u001B[0;32mIn [219], line 8\u001B[0m, in \u001B[0;36mdecompress\u001B[0;34m(liste_bloc)\u001B[0m\n\u001B[1;32m      5\u001B[0m image \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros((rows\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m8\u001B[39m, cols\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m8\u001B[39m), dtype\u001B[38;5;241m=\u001B[39mnp\u001B[38;5;241m.\u001B[39muint8)\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc)):\n\u001B[0;32m----> 8\u001B[0m   liste_bloc[i] \u001B[38;5;241m=\u001B[39m \u001B[43midct2\u001B[49m\u001B[43m(\u001B[49m\u001B[43mliste_bloc\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     10\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(rows):\n\u001B[1;32m     11\u001B[0m   \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(cols):\n",
-      "Cell \u001B[0;32mIn [205], line 23\u001B[0m, in \u001B[0;36midct2\u001B[0;34m(a)\u001B[0m\n\u001B[1;32m     22\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21midct2\u001B[39m(a):\n\u001B[0;32m---> 23\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m sp\u001B[38;5;241m.\u001B[39mfft\u001B[38;5;241m.\u001B[39midct( \u001B[43msp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfft\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43midct\u001B[49m\u001B[43m(\u001B[49m\u001B[43m \u001B[49m\u001B[43ma\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43maxis\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;241;43m0\u001B[39;49m\u001B[43m \u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnorm\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mortho\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m , norm\u001B[38;5;241m=\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mortho\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "File \u001B[0;32m~/opt/miniconda3/lib/python3.9/site-packages/scipy/fft/_backend.py:25\u001B[0m, in \u001B[0;36m_ScipyBackend.__ua_function__\u001B[0;34m(method, args, kwargs)\u001B[0m\n\u001B[1;32m     23\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m fn \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[1;32m     24\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mNotImplemented\u001B[39m\n\u001B[0;32m---> 25\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mfn\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/opt/miniconda3/lib/python3.9/site-packages/scipy/fft/_pocketfft/realtransforms.py:19\u001B[0m, in \u001B[0;36m_r2r\u001B[0;34m(forward, transform, x, type, n, axis, norm, overwrite_x, workers, orthogonalize)\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m_r2r\u001B[39m(forward, transform, x, \u001B[38;5;28mtype\u001B[39m\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m2\u001B[39m, n\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m-\u001B[39m\u001B[38;5;241m1\u001B[39m, norm\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m,\n\u001B[1;32m      9\u001B[0m          overwrite_x\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m, workers\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, orthogonalize\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n\u001B[1;32m     10\u001B[0m     \u001B[38;5;124;03m\"\"\"Forward or backward 1-D DCT/DST\u001B[39;00m\n\u001B[1;32m     11\u001B[0m \n\u001B[1;32m     12\u001B[0m \u001B[38;5;124;03m    Parameters\u001B[39;00m\n\u001B[0;32m   (...)\u001B[0m\n\u001B[1;32m     17\u001B[0m \u001B[38;5;124;03m        The transform to perform\u001B[39;00m\n\u001B[1;32m     18\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m---> 19\u001B[0m     tmp \u001B[38;5;241m=\u001B[39m \u001B[43m_asfarray\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     20\u001B[0m     overwrite_x \u001B[38;5;241m=\u001B[39m overwrite_x \u001B[38;5;129;01mor\u001B[39;00m _datacopied(tmp, x)\n\u001B[1;32m     21\u001B[0m     norm \u001B[38;5;241m=\u001B[39m _normalization(norm, forward)\n",
-      "File \u001B[0;32m~/opt/miniconda3/lib/python3.9/site-packages/scipy/fft/_pocketfft/helper.py:92\u001B[0m, in \u001B[0;36m_asfarray\u001B[0;34m(x)\u001B[0m\n\u001B[1;32m     90\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m np\u001B[38;5;241m.\u001B[39masarray(x, np\u001B[38;5;241m.\u001B[39mfloat32)\n\u001B[1;32m     91\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m x\u001B[38;5;241m.\u001B[39mdtype\u001B[38;5;241m.\u001B[39mkind \u001B[38;5;129;01mnot\u001B[39;00m \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mfc\u001B[39m\u001B[38;5;124m'\u001B[39m:\n\u001B[0;32m---> 92\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43masarray\u001B[49m\u001B[43m(\u001B[49m\u001B[43mx\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mnp\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mfloat64\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     94\u001B[0m \u001B[38;5;66;03m# Require native byte order\u001B[39;00m\n\u001B[1;32m     95\u001B[0m dtype \u001B[38;5;241m=\u001B[39m x\u001B[38;5;241m.\u001B[39mdtype\u001B[38;5;241m.\u001B[39mnewbyteorder(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m=\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
-      "\u001B[0;31mValueError\u001B[0m: could not convert string to float: '255 255 255 \\n'"
+      "\u001B[0;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn [272], line 21\u001B[0m\n\u001B[1;32m     19\u001B[0m ecrire_bloc(test)\n\u001B[1;32m     20\u001B[0m info_fichier(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mfichier.txt\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m---> 21\u001B[0m \u001B[43mlire_fichier\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mfichier.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[0;32mIn [270], line 42\u001B[0m, in \u001B[0;36mlire_fichier\u001B[0;34m(fichier)\u001B[0m\n\u001B[1;32m     40\u001B[0m         \u001B[38;5;28;01mfor\u001B[39;00m k \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m])):\n\u001B[1;32m     41\u001B[0m             \u001B[38;5;28;01mfor\u001B[39;00m l \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(liste_bloc[\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m][\u001B[38;5;241m0\u001B[39m])):\n\u001B[0;32m---> 42\u001B[0m                 \u001B[43mliste_bloc\u001B[49m\u001B[43m[\u001B[49m\u001B[43mi\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mj\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43mk\u001B[49m\u001B[43m]\u001B[49m\u001B[43m[\u001B[49m\u001B[43ml\u001B[49m\u001B[43m]\u001B[49m \u001B[38;5;241m=\u001B[39m liste_bloc[i][j][k][l]\u001B[38;5;241m.\u001B[39mreplace(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;130;01m\\n\u001B[39;00m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m     43\u001B[0m liste_bloc \u001B[38;5;241m=\u001B[39m decompress(liste_bloc)\n\u001B[1;32m     44\u001B[0m f\u001B[38;5;241m.\u001B[39mclose()\n",
+      "\u001B[0;31mTypeError\u001B[0m: 'str' object does not support item assignment"
      ]
     }
    ],
@@ -674,7 +669,10 @@
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-05-20T16:59:54.679535Z"
+    }
    }
   }
  ],
